--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,9 @@
     transform: rotate(360deg);
   }
 }
+*{
+  transition: all 500ms ease-in-out;
+}
 body, html {
   margin: 0;
   padding: 0;
@@ -81,5 +84,13 @@ body {
   width: 300px; height: 300px;
   background-image: url("components/loader_pr.gif");
   background-size: cover;
-  animation: grow 250ms ease-in-out;
+  animation: grow 500ms ease-in-out alternate infinite;
+}
+@keyframes grow{
+  from{
+    transform: scale(1);
+  }
+  to{
+    transform: scale(1.2);
+  }
 }
