--- a/src/App.css
+++ b/src/App.css
@@ -88,9 +88,9 @@ body {
 }
 @keyframes grow{
   from{
-    transform: scale(1);
+    transform: scale(1) rotate(5deg);
   }
   to{
-    transform: scale(1.2);
+    transform: scale(1.2) rotate(-5deg);
   }
 }
