--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,9 @@
     transform: rotate(360deg);
   }
 }
+*{
+  transition: all 500ms ease-in-out;
+}
 body, html {
   margin: 0;
   padding: 0;
@@ -65,4 +68,29 @@ body {
 
 .canteen-logo:hover {
   transform: scale(1.1);
+}
+
+#preloader{
+  top: 50%;left: 50%; position: fixed; transform: translate(-50%,-50%);
+  width: 100%;
+  height: 100vh;
+  background-color: #fff;
+  z-index: 1050;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#preloader #load{
+  width: 300px; height: 300px;
+  background-image: url("components/loader_pr.gif");
+  background-size: cover;
+  animation: grow 500ms ease-in-out alternate infinite;
+}
+@keyframes grow{
+  from{
+    transform: scale(1) rotate(5deg);
+  }
+  to{
+    transform: scale(1.2) rotate(-5deg);
+  }
 }
