--- a/src/App.css
+++ b/src/App.css
@@ -1,62 +1,28 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,800");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-*{
+* {
   transition: all 500ms ease-in-out;
 }
+
 body, html {
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
-  background: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);
-  overflow: hidden;
+  overflow: auto;
+  height: auto;
 }
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,800");
 
 body {
-  background: #f6f5f7;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  font-family: "Montserrat", sans-serif;
-  height: 100vh;
-  margin: -20px 0 50px;
+  min-height: 100vh;
+}
+
+.App {
+  text-align: center;
+  width: 100%;
 }
 
 .canteen-logo {
@@ -70,8 +36,10 @@ body {
   transform: scale(1.1);
 }
 
-#preloader{
-  top: 50%;left: 50%; position: fixed; transform: translate(-50%,-50%);
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100vh;
   background-color: #fff;
@@ -80,17 +48,20 @@ body {
   justify-content: center;
   align-items: center;
 }
-#preloader #load{
-  width: 300px; height: 300px;
+
+#preloader #load {
+  width: 300px;
+  height: 300px;
   background-image: url("components/loader_pr.gif");
   background-size: cover;
   animation: grow 500ms ease-in-out alternate infinite;
 }
-@keyframes grow{
-  from{
+
+@keyframes grow {
+  from {
     transform: scale(1) rotate(5deg);
   }
-  to{
+  to {
     transform: scale(1.2) rotate(-5deg);
   }
 }
