--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -47,4 +47,27 @@
       padding: 2rem;
     }
   }
+
+  .scroll-indicator {
+    text-align: center;
+    padding: 5px 0;
+  }
+  
+  .scroll-indicator i {
+    font-size: 2rem;
+    color: rgb(60, 60, 60);
+    animation: bounce 2s infinite;
+  }
+  
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-30px);
+    }
+    60% {
+      transform: translateY(-15px);
+    }
+  }
   
