--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -11,7 +11,7 @@
   }
   
   .featured-carousel .carousel-item img {
-    object-fit:cover;
+    object-fit:contain;
     height: 100%;
     width: 100%;
   }
