--- a/src/styles/CartPage.css
+++ b/src/styles/CartPage.css
@@ -1,20 +1,38 @@
 .cart-page {
-  width: 800px;
-  margin: auto;
-  margin-top: 100px;
-  margin-bottom: 40px;
+  width: 90%;
+  max-width: 800px;
+  margin: 100px auto 40px;
   padding: 20px;
   background-color: #fcfcfc;
   border: 1px solid #ddd;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+.cart-page h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  color: #2c3e50;
+}
+
+.empty-cart-message {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #7f8c8d;
+}
+
+.cart-items {
+  margin-bottom: 40px;
+}
+
 .cart-item {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  padding: 20px;
   margin-bottom: 20px;
   background-color: #ffffff;
-  padding: 20px
+  border: 1px solid #ddd;
+  border-radius: 10px;
 }
 
 .cart-item-image {
@@ -26,29 +44,64 @@
 
 .cart-item-details {
   flex: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cart-item-info {
+  flex: 2;
+}
+
+.cart-item-name {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.cart-item-price {
+  font-size: 1rem;
+  color: #7f8c8d;
 }
 
 .quantity-controls {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  margin-bottom: 10px;
 }
 
 .quantity {
-  font-size: 18px;
+  font-size: 1rem;
   font-weight: bold;
   margin: 0 10px;
 }
 
+.remove-button {
+  margin-left: 20px;
+}
+
 .cart-summary {
-  margin-top: 40px;
-  text-align: right;
+  text-align: center;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+}
+
+.cart-summary h4 {
+  margin-bottom: 20px;
+  font-size: 1.5rem;
+  color: #2c3e50;
+}
+
+.summary-details {
+  font-size: 1rem;
+  color: #7f8c8d;
+  margin-bottom: 20px;
 }
 
 .proceed-to-checkout {
   padding: 10px 20px;
-  font-size: 18px;
+  font-size: 1rem;
   font-weight: bold;
   border-radius: 10px;
 }
